# runagent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build-macos.sh  build_guide.md  clean-build.sh  cliff.toml  debug.py  docker-compose.yml  installation-and-usage-guide.md  leads_20251102_115848.csv  leads_20251102_120327.csv  pyproject.toml  release.sh  runagent_entry.py  sdk_checklist.md
.github/workflows/: build-binaries.yml  create-release.yml  go-release.yml  python-release.yml  reusable-sdk-release.yml  rust-release.yml  sync-from-main.yml  typescript-release.yml
_docs/: development.md
build_scripts/: build-linux-standalone.sh  build-macos-standalone.sh  build-windows-standalone.ps1
chatbot_example/langgraph_sqlite/: README.md  agent.py  requirements.txt  runagent.config.json
docs/: docker-compose.yml  docs.json  index.mdx  introduction.mdx  package.json  pnpm-lock.yaml  quickstart.mdx
docs/api-reference/: authentication.mdx  errors.mdx  introduction.mdx  rate-limits.mdx
docs/cli/: examples.mdx  overview.mdx
docs/configuration/: config-file.mdx  environment.mdx  project-structure.mdx
docs/deployment/: cloud-deployment.mdx  local-development.mdx
docs/examples/: overview.mdx
docs/explanation/: architecture-overview.mdx  changelog.mdx  core-concepts.mdx  feature-overview.mdx  frameworks-overview.mdx  installation.mdx  introduction.mdx  key-concepts-at-a-glance.mdx  overview.mdx  production-considerations.mdx  quickstart-map.mdx  roadmap.mdx  security.mdx  why-runagent.mdx
docs/frameworks/: crewai.mdx  custom.mdx  langgraph.mdx  letta.mdx  overview.mdx
docs/get-started/: core-concepts.mdx  first-agent.mdx  installation.mdx  introduction.mdx  overview.mdx  quickstart.mdx
docs/how-to/: advanced-tasks.mdx  call-from-go.mdx  call-from-javascript.mdx  call-from-python.mdx  call-from-rust.mdx  overview.mdx
docs/reference/: overview.mdx
docs/resources/: examples.mdx  faq.mdx  overview.mdx  troubleshooting.mdx
docs/runagent-cloud/: cloud-deployment.mdx  overview.mdx
docs/sdk/: coming-soon.mdx  overview.mdx
docs/snippets/: need-help.mdx
docs/tutorials/: book-writer.mdx  customer-support-agent.mdx  deploy-your-first-agent.mdx  internal-qa-agent.mdx  lead-agent.mdx  multi-language-wrapper.mdx  overview.mdx  (+1 more)
examples/deprecated/code-reviewer/code_reviewer_letta/: Cargo.toml
examples/lead-agent/backend-rust/: .gitignore  Cargo.toml  README.md
examples/lead-agent/backend-rust/src/: main.rs
new-test-2/: agent.py  runagent.config.json
runagent/: __init__.py  __version__.py  client.py  config.py  constants.py  exceptions.py
runagent-csharp/: .gitignore  CHANGELOG.md  LICENSE  PUBLISH.md  README.md  RunAgent.csproj
runagent-dart/: CHANGELOG.md  PUBLISH.md  README.md  pubspec.yaml
runagent-go/: README.md  client.go  go.mod  types.go  version.go
runagent-php/: .gitignore  CHANGELOG.md  Dockerfile.test  FINAL_PHP_SDK_SUMMARY.md  LICENSE  NICE_AGENT_GUIDE.md  NICE_AGENT_TEST_RESULTS.md  PHP_SDK_FILES_INDEX.md  PHP_SDK_FINAL_STATUS.md  PUBLISH.md  QUICK_START_TEST.md  README.md  README_COMPARISON.md  RESTART_AGENT_INSTRUCTIONS.md  TEST_COMPLETE_SUMMARY.md  TEST_INSTRUCTIONS.md  composer.json  docker-compose.test.yml  quick_test.py  run-tests.sh  sdk_checklist_verification.py  test-nice-agent.sh  verify_php_sdk_with_nice_agent.py
runagent-rust/: API_AUTHENTICATION.md  Cargo.toml  PUBLISH.md
runagent-rust/examples/: async_example.rs  direct_construction.rs
runagent-rust/runagent/: Cargo.toml  LICENSE  README.md
runagent-rust/runagent/examples/: async_example.rs  direct_construction.rs  direct_construction_omitted.rs  sync_example.rs  test_deserialize.rs
runagent-rust/runagent/src/: blocking.rs  constants.rs  lib.rs
runagent-rust/runagent/src/client/: mod.rs  rest_client.rs  runagent_client.rs  socket_client.rs
runagent-rust/runagent/src/db/: manager.rs  mod.rs  models.rs  service.rs
runagent-rust/runagent/src/server/: handlers.rs  local_server.rs  mod.rs
runagent-rust/runagent/src/server/framework/: generic.rs  langchain.rs  mod.rs
runagent-rust/runagent/src/types/: errors.rs  mod.rs  responses.rs  schema.rs
runagent-rust/runagent/src/utils/: config.rs  mod.rs  port.rs  serializer.rs
runagent-ts/: PUBLISH.md  README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  runagent-0.1.26.tgz  test-browser.html  test-runagent.mjs  tsconfig.json  vite.config.js
runagent/rust_sdk/: Cargo.toml
runagent/rust_sdk/runagent/: Cargo.toml
runagent/rust_sdk/runagent-cli/: Cargo.toml
runagent/rust_sdk/runagent-cli/src/: main.rs
runagent/rust_sdk/runagent-cli/src/commands/: db_status.rs  deploy.rs  init.rs  mod.rs  run.rs  serve.rs  setup.rs  teardown.rs  template.rs
runagent/rust_sdk/runagent-cli/src/config/: cli_config.rs  mod.rs
runagent/rust_sdk/runagent-cli/src/utils/: mod.rs  output.rs  validation.rs
runagent/rust_sdk/runagent/src/: constants.rs  lib.rs
runagent/rust_sdk/runagent/src/client/: mod.rs  rest_client.rs  runagent_client.rs  socket_client.rs
runagent/rust_sdk/runagent/src/db/: manager.rs  mod.rs  service.rs
runagent/rust_sdk/runagent/src/server/: handlers.rs  local_server.rs
runagent/rust_sdk/runagent/src/server/framework/: langgraph.rs
runagent/rust_sdk/runagent/src/types/: schema.rs
runagent/rust_sdk/runagent/src/utils/: agent.rs  config.rs  imports.rs  mod.rs  serializer.rs
sdk-agent/: main.py  runagent.config.json
temp_rust_test/: Cargo.toml
templates/: __init__.py  base_template.py  template_factory.py  wrapper.py
test/: rag_test.txt  runagent_types_test.dart  test_lightrag.py  test_sdk.py  test_sdk_langchain.py
test-langchain-basic/: agent.py  main.py
test_scripts/rust/test_agno/: Cargo.toml
test_scripts/rust/test_agno/src/: main.rs
test_scripts/rust/test_langchain/: Cargo.toml
test_scripts/rust/test_langchain/src/: main.rs
test_scripts/rust/test_langgraph_sqlite/: Cargo.toml
test_scripts/rust/test_langgraph_sqlite/src/: main.rs
test_scripts/rust/test_lightrag/: Cargo.toml
test_scripts/rust/test_lightrag/src/: main.rs
(+590 files in other folders)
