# runagent/rust_sdk/Cargo.toml - Updated workspace with CLI
[workspace]
members = ["runagent"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }

# HTTP and web
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
axum = { version = "0.7.6", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# CLI dependencies
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# Utility
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
once_cell = "1.19"
directories = "5.0"

# Async streaming
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config and environment
config = "0.14"
dotenv = "0.15"

# Process and system
which = "6.0"
tempfile = "3.8"
dirs = "5.0"

# URL parsing
url = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true