[package]
name = "runagent"
version = "0.1.37"
edition = "2021"
description = "RunAgent SDK for Rust - Client SDK for interacting with deployed AI agents"
license = "MIT"
repository = "https://github.com/runagent-dev/runagent"
homepage = "https://run-agent.ai"
documentation = "https://docs.run-agent.ai"
readme = "README.md"
keywords = ["ai", "agents", "llm", "sdk", "deployment"]
categories = ["api-bindings", "development-tools", "web-programming"]
authors = ["RunAgent <runagent.live@gmail.com?>"]


[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
async-stream = { workspace = true }
sqlx = { workspace = true }

# Additional dependencies
url = "2.5"
bytes = "1.5"
mime = "0.3"
percent-encoding = "2.3"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = ["db"]
db = []
