[package]
name = "runagent-cli"
version = "0.1.0"
edition = "2021"
description = "RunAgent CLI - Deploy and manage AI agents easily"
license = "MIT"
repository = "https://github.com/runagent-dev/runagent"
keywords = ["ai", "agents", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "runagent"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
runagent = { path = "../runagent", features = ["db", "server"] }

# CLI dependencies
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
console = "0.15"
indicatif = "0.17"
colored = "2.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures-util = "0.3"  # Added this to fix the compilation error

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utility
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# System
which = "6.0"
dirs = "5.0"
tempfile = "3.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
config = "0.14"
url = "2.5"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"