# runagent/rust_sdk/runagent/Cargo.toml - SIMPLIFIED (No complex features)
[package]
name = "runagent"
version = "0.1.0"
edition = "2021"
description = "RunAgent SDK for Rust - Deploy and manage AI agents easily"
license = "MIT"
repository = "https://github.com/runagent-dev/runagent"
keywords = ["ai", "agents", "llm", "sdk"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
async-stream = { workspace = true }

# Additional dependencies
url = "2.5"
bytes = "1.5"
mime = "0.3"
percent-encoding = "2.3"

[dev-dependencies]
tokio-test = "0.4"

# Simple features without complex dependencies
[features]
default = []